src/index.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
.welcome-section{
    min-height: 100vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 2.5em;
}

.welcome-button{
    color: rgba(0, 0, 0, 0.721);
    padding: 10px 50px;
    margin: 40px;
    font-family: inherit;
    font-size: 1em;
    background-color: rgb(220, 239, 243);
    border-radius: 40px;
    border: none;
    cursor: pointer;
    box-shadow: 4px 3px 7px rgba(0, 0, 0, 0.57);
    transition: ease-in-out 200ms;
}

.welcome-button:hover{
    transform: scale(1.07);
}

.template-page{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.template-container{
    width: 1000px;
    height: 700px;
    border: none;
    box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.329);
    border-radius: 10px;
    margin: 50px;
    display: grid;
    grid-template-columns: 500px 500px;
}

.preview-container{
    border-left: 2px solid rgba(0, 0, 0, 0.263);
    padding: 10px;

}

.input-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 20px;

}
.button-container{
    margin-top: auto;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.nav-button{
    font-family: inherit;
    font-weight: 500;
    font-size: 1em;
    padding: 10px 20px;
    border: none;
    border-radius: 15px;
    background-color: rgb(220, 239, 243);
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.143);
    cursor: pointer;

}

.personal-section{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.personal-section input {
    width: 400px;
    font-size: 1em;
    border-radius: 10px;
    padding: 3px;
    border: 2px solid rgba(0, 0, 0, 0.172);

}

.about-input{
    width: 400px;
    height: 200px;
    font-size: 1.2em;
    border-radius: 10px;
    padding: 10px;
    resize: none;
    border:2px solid rgba(0, 0, 0, 0.1);
}

.personal-header{
    padding: 20px;
}

.project-header{
    padding: 10px;
}

.project-div input{
    width: 400px;
    font-size: 1em;
    border-radius: 10px;
    padding: 3px;
    border: 2px solid rgba(0, 0, 0, 0.172);
}

.project-submit-button{
       font-family: inherit;
    font-weight: 500;
    font-size: 1em;
    padding: 10px 20px;
    border: none;
    border-radius: 15px;
    background-color: rgb(220, 239, 243);
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.143);
    cursor: pointer;
    margin: 10px;
    align-self: flex-start;
}

.skills-section{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center; 
}

.skills-header{
    padding: 10px;
}

.skills-input{
    width: 400px;
    height: 100px;
    font-size: 1.1em;
    font-weight: 375;
    border-radius: 10px;
    padding: 10px;
    resize: none;
    border:2px solid rgba(0, 0, 0, 0.1);
    overflow-wrap: break-word;
    word-break: break-word;
}

.submit-skill-button{
        font-family: inherit;
    font-weight: 500;
    font-size: 1em;
    padding: 10px 20px;
    border: none;
    border-radius: 15px;
    background-color: rgb(220, 239, 243);
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.143);
    cursor: pointer;
    align-self: flex-start;
}

.education-header{
    padding: 10px;
}

.education-section{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.education-input{
    width: 400px;
    font-size: 1em;
    border-radius: 10px;
    padding: 3px;
    border: 2px solid rgba(0, 0, 0, 0.172);
   
}

.education-section textarea{
    width: 400px;
    height: 100px;
    font-size: 1.1em;
    font-weight: 375;
    border-radius: 10px;
    padding: 10px;
    resize: none;
    border:2px solid rgba(0, 0, 0, 0.1);
    overflow-wrap: break-word;
    word-break: break-word;    
}

.date-input{
    font-size: 1em;
    border-radius: 5px;
    border:2px solid rgba(0, 0, 0, 0.1);
}

.education-submit-button{
    font-family: inherit;
    font-weight: 500;
    font-size: 1em;
    padding: 10px 20px;
    border: none;
    border-radius: 15px;
    background-color: rgb(220, 239, 243);
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.143);
    cursor: pointer;
    align-self: flex-start;   
}

.work-header{
    padding: 10px;
}

.work-input{
    width: 400px;
    font-size: 1em;
    border-radius: 10px;
    padding: 3px;
    border: 2px solid rgba(0, 0, 0, 0.172);   
}

.work-description{
    width: 400px;
    height: 100px;
    font-size: 1.1em;
    font-weight: 375;
    border-radius: 10px;
    padding: 10px;
    resize: none;
    border:2px solid rgba(0, 0, 0, 0.1);
    overflow-wrap: break-word;
    word-break: break-word;     
}

.work-submit-button{
    font-family: inherit;
    font-weight: 500;
    font-size: 1em;
    padding: 10px 20px;
    border: none;
    border-radius: 15px;
    background-color: rgb(220, 239, 243);
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.143);
    cursor: pointer;
    align-self: flex-start;      
}

